kubernetes/apps/default/nextcloud/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    # yaml-language-server-disable
    - "nextcloud.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/carddav
        - path:
            type: Exact
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 301
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
